--- a/index.html
+++ b/index.html
@@ -6,101 +6,118 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script src="js/uikit.min.js"></script>
-    <script src="js/uikit-icons.min.js"></script>
+    <link rel="shortcut icon" href="assets/images/utensils.ico">
+    <script type="text/javascript" src="assets/js/uikit-icons.min.js"></script>
+    <script type="text/javascript" src="assets/js/uikit.min.js"></script>
     <script type="text/javascript" src="assets/js/app.js"></script>
-    <title>Document</title>
+    <title>Feeling Hungry?</title>
 </head>
 
 <body>
     <div class="everything-container">
         <div class="types-of-diets"></div>
+        <ul uk-accordion="multiple: true">
+            <li class="uk-open">
+                <a class="uk-accordion-title" href="#">
+                    <div class="meats-header title-headers">Meat Choices</div>
+                </a>
+                <div class="uk-accordion-content meat-button-container">
+                    <button class="meat-button uk-button uk-button-default uk-button-large" id="steak"
+                        data-food="steak">Steak</button>
+                    <button class="meat-button uk-button uk-button-default uk-button-large" id="chicken"
+                        data-food="chicken">Chicken</button>
+                    <button class="meat-button uk-button uk-button-default uk-button-large" id="fish"
+                        data-food="fish">Fish</button>
+                    <button class="meat-button uk-button uk-button-default uk-button-large" id="pork"
+                        data-food="pork">Pork</button>
+                    <button class="meat-button uk-button uk-button-default uk-button-large" id="tufo"
+                        data-food="tufo">Tofu</button>
+                </div>
+            </li>
+            <li>
+                <a class="uk-accordion-title" href="#">
+                    <div class="veggies-header title-headers">Vegetable Choices
+                    </div>
+                </a>
+                <div class="uk-accordion-content veggie-button-container">
+                    <button class="veggie-button uk-button uk-button-default uk-button-large" id="onion"
+                        data-food="onion">Onions</button>
+                    <button class="veggie-button uk-button uk-button-default uk-button-large" id="tomatos"
+                        data-food="tomatos">Tomatos</button>
+                    <button class="veggie-button uk-button uk-button-default uk-button-large" id="potatoes"
+                        data-food="potatoes">Potatoes</button>
+                    <button class="veggie-button uk-button uk-button-default uk-button-large" id="carrots"
+                        data-food="carrots">Carrots</button>
+                    <button class="veggie-button uk-button uk-button-default uk-button-large" id="zucchini"
+                        data-food="zucchini">Zucchini</button>
+                    <br>
+                    <button class="veggie-button uk-button uk-button-default uk-button-large" id="spinach"
+                        data-food="spinach">Spinach</button>
+                    <button class="veggie-button uk-button uk-button-default uk-button-large" id="broccoli"
+                        data-food="broccoli">Broccoli</button>
+                    <button class="veggie-button uk-button uk-button-default uk-button-large" id="bell-peppers"
+                        data-food="bell-peppers">Bell Peppers</button>
+                    <button class="veggie-button uk-button uk-button-default uk-button-large" id="cucumbers"
+                        data-food="cucumbers">Cucumbers</button>
+                    <button class="veggie-button uk-button uk-button-default uk-button-large" id="corn"
+                        data-food="corn">Corn</button>
+                    <br>
+                    <button class="veggie-button uk-button uk-button-default uk-button-large" id="cauliflower"
+                        data-food="cauliflower">Cauliflower</button>
+                    <button class="veggie-button uk-button uk-button-default uk-button-large" id="green-beans"
+                        data-food="green-beans">Green Beans</button>
+                    <button class="veggie-button uk-button uk-button-default uk-button-large" id="squash"
+                        data-food="squash">Squash</button>
+                    <button class="veggie-button uk-button uk-button-default uk-button-large" id="sweet-potatoes"
+                        data-food="sweet-potatoes">Sweet Potatoes</button>
+                    <button class="veggie-button uk-button uk-button-default uk-button-large" id="carrots"
+                        data-food="carrots">Carrots</button>
+                </div>
+            </li>
+            <li>
+                <a class="uk-accordion-title" href="#">
+                    <div class="carbs-header title-headers">Carb Choices</div>
+                </a>
+                <div class="uk-accordion-content carb-button-container">
+                    <button class="carb-button uk-button uk-button-default uk-button-large" id="pasta"
+                        data-food="pasta">Pasta</button>
+                    <button class="carb-button uk-button uk-button-default uk-button-large" id="bread"
+                        data-food="bread">Bread</button>
+                    <button class="carb-button uk-button uk-button-default uk-button-large" id="white-rice"
+                        data-food="white-rice">White Rice</button>
+                    <button class="carb-button uk-button uk-button-default uk-button-large" id="brown-rice"
+                        data-food="brown-rice">Brown Rice</button>
+                    <button class="carb-button uk-button uk-button-default uk-button-large" id="quinoa"
+                        data-food="quinoa">Quinoa</button>
+                </div>
+            </li>
+            <li>
+                <a class="uk-accordion-title" href="#">
+                    <div class="dairy-header title-headers">Dairy Choices</div>
+                </a>
+                <div class="uk-accordion-content carb-button-container dairy-button-container">
+                    <button class="dairy-button uk-button uk-button-default uk-button-large" id="cheese"
+                        data-food="cheese">Cheese</button>
+                    <button class="dairy-button uk-button uk-button-default uk-button-large" id="cream"
+                        data-food="cream">Cream</button>
+                    <button class="dairy-button uk-button uk-button-default uk-button-large" id="milk"
+                        data-food="milk">Milk</button>
+                    <button class="dairy-button uk-button uk-button-default uk-button-large" id="yogurt"
+                        data-food="yogurt">Yogurt</button>
+                    <button class="dairy-button uk-button uk-button-default uk-button-large" id="coconut-milk"
+                        data-food="coconut-milk">Coconut Milk</button>
+                </div>
+            </li>
+            <li>
+                <a class="uk-accordion-title" href="#">
+                    <div class="user-additions-header title-headers">User Addtions</div>
+                </a>
+                <div class="uk-accordion-content user-button-container">
 
+                </div>
+            </li>
+        </ul>
 
-        <div class="meats-header">Meat Choices</div>
-        <div class="meat-button-container">
-            <label class="container">
-                Steak
-                <input type="checkbox">
-                <span class="checkmark meat-button"></span>
-            </label>
-            <label class="container">
-                Chicken
-                <input type="checkbox">
-                <span class="checkmark meat-button"></span>
-            </label>
-            <label class="container">
-                Fish
-                <input type="checkbox">
-                <span class="checkmark meat-button"></span>
-            </label>
-            <label class="container">
-                Pork
-                <input type="checkbox">
-                <span class="checkmark meat-button"></span>
-            </label>
-            <label class="container">
-                Tofu
-                <input type="checkbox">
-                <span class="checkmark meat-button"></span>
-            </label>
-        
-            <!-- <button class="meat-button">Steak</button>
-            <button class="meat-button">Chicken</button>
-            <button class="meat-button">Fish</button>
-            <button class="meat-button">Pork</button>
-            <button class="meat-button">Tofu</button> -->
-        </div>
-
-        <div class="veggies-header">Vegetable Choices</div>
-        <div class="veggie-button-container">
-            <button type="checkbox" class="veggie-button">Green Bell Peppers</button>
-            <button class="veggie-button">Onions</button>
-            <button class="veggie-button">Tomatos</button>
-            <button class="veggie-button">Potatoes</button>
-            <button class="veggie-button">Carrots</button>
-            <button class="veggie-button">Asparagus</button>
-            <br>
-            <button class="veggie-button">Spinach</button>
-            <button class="veggie-button">Broccoli</button>
-            <button class="veggie-button">Red Bell Peppers</button>
-            <button class="veggie-button">Cucumbers</button>
-            <button class="veggie-button">Sweet Potatoes</button>
-            <button class="veggie-button">Cauliflower</button>
-        </div>
-
-        <div class="carbs-header">Carb Choices</div>
-        <div class="carb-button-container">
-            <button class="carb-button"></button>
-            <button class="carb-button"></button>
-            <button class="carb-button"></button>
-            <button class="carb-button"></button>
-            <button class="carb-button"></button>
-            <button class="carb-button"></button>
-            <button class="carb-button"></button>
-            <button class="carb-button"></button>
-            <button class="carb-button"></button>
-        </div>
-
-        <div class="dairy-header">Dairy Choices</div>
-        <div class="dairy-button-container">
-            <button class="dairy-button"></button>
-            <button class="dairy-button"></button>
-            <button class="dairy-button"></button>
-            <button class="dairy-button"></button>
-            <button class="dairy-button"></button>
-            <button class="dairy-button"></button>
-            <button class="dairy-button"></button>
-            <button class="dairy-button"></button>
-            <button class="dairy-button"></button>
-        </div>
-
-        <div class="user-additions-header">User Addtions</div>
-        <div class="user-button-container">
-
-        </div>
-
-    </div>
 
 
 </body>
