--- a/assets/index.html
+++ b/assets/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
 <head>
-   
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -13,21 +12,11 @@
     <script type="text/javascript" src="assets/js/uikit-icons.min.js"></script>
     <script type="text/javascript" src="assets/js/uikit.min.js"></script>
     <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
-    <title>Feeling Hungry?</title>
 
+    <title>What's in my Fridge</title>
 </head>
 
 <body>
-
-    <div class="uk-navbar-container" uk-navbar>
-        <div class="uk-navbar-left">
-            <a class="uk-navbar-item uk-logo">Feeling Hungry?</a>
-            <ul class="uk-navbar-nav">About</ul>
-            <ul class="uk-navbar-nav">Login</ul>
-            <ul class="uk-navbar-nav">Signout</ul>
-        </div>
-    </div>
-
     <div class="everything-container">
         <div class="types-of-diets"></div>
         <ul uk-accordion="multiple: true">
@@ -123,14 +112,11 @@
         </ul>
 
         <!--jquery-->
-        <script type="text/javascript" src="assets/js/uikit-icons.min.js"></script>
-        <script type="text/javascript" src="assets/js/uikit.min.js"></script>
         <script src="http://code.jquery.com/jquery-3.3.1.js"
             integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
         <!--custom js-->
         <script src="assets/js/app.js"></script>
 
 </body>
-
 
 </html>
