--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <title>Feeling Hungry?e</title>
+    <title>Feeling Hungry?</title>
 </head>
 
 <body>
@@ -26,7 +26,6 @@
                         <!-- This is a button toggling the modal -->
                         <button class="uk-button uk-button-default uk-margin-small-right sign-up-login" type="button"
                             uk-toggle="target: #modal-example">Sign Up/Login</button>
-        
                         <!-- This is the modal -->
                         <div id="modal-example" uk-modal>
                             <div class="uk-modal-dialog uk-modal-body">
@@ -34,7 +33,7 @@
                                 <div class="uk-column-1-2 uk-column-divider">
                                     <form id="form">
                                         <h4>Sign up</h4>
-                                        <br>
+                                        <!-- <br> -->
                                         Email:
                                         <br>
                                         <input class="form-control" type="text" placeholder="" id="email-input">
@@ -51,7 +50,7 @@
                         <div cclass="uk-column-1-2 uk-column-divider"> -->
                                     <form id="loginForm">
                                         <h4>Log In</h3>
-                                        <br>
+                                        <!-- <br> -->
                                         Email:
                                         <br>
                                         <input class="form-control" type="text" placeholder="" id="email-login">
@@ -72,6 +71,7 @@
                                 </p>
                             </div>
                         </div>
+                        <!-- <button class="uk-button uk-button-default uk-margin-small-right sign-up-login" type="button">Logout</button> -->
                     </ul>
                 </div>
             </div>
@@ -221,21 +221,21 @@
             </ul>
     </div>
     </div>
-    <div class="container2">
-            <div uk-grid="masonry: true" id="recipesHere">
-                <div class="uk-card uk-card-default uk-card-hover">
-                    <div class="uk-card-body">
-                        <h3 class="uk-card-title">Media Bottom</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
-                    </div>
-    
-                    <div class="uk-card-media-bottom">
-                        <img src="assets/images/carbs.jpg" alt="" height=150px>
-                    </div>
-                </div>
-            </div>
-        </div>
 
+<div class="container2">
+        <div uk-grid="masonry: true" id="recipesHere">
+          <div class="uk-card uk-card-default uk-card-hover">
+            <!-- <div class="uk-card-body">
+              <h3 class="uk-card-title">Media Bottom</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+            </div>
+  
+            <div class="uk-card-media-bottom">
+              <img src="assets/images/carbs.jpg" alt="" height=150px>
+            </div> -->
+          </div>
+        </div>
+      </div>
     <footer>
         <span id="footer-info">
             Copyright &copy; 2019
